@@ -32,7 +32,7 @@ extern class model *merchant_large, *merchant_medium, *merchant_small,
 	*skyhemisphere, *corvette_mdl, *freighter_medium, *freighter_large,
 	*tanker_small,
 	*conning_tower_typeVII;
-extern class texture *water, *the_moon, *background, *gauge1,
+extern class texture *water, *the_moon, *the_sun, *background, *gauge1,
 	*gauge2, *gauge3, *gauge4, *gauge5, *psbackgr, *panelbackgr,
 	*addleadangle, *torpempty, *torpreload, *torpunload, *uzo, *metalbackgr,
 	*torpt1, *torpt2, *torpt3, *torpt3a, *torpt4, *torpt5, *torpt11, *torpt1fat, *torpt3fat, *torpt6lut,
